--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.9.0",
-    "eslint-config-next": "^12.0.10"
+    "eslint-config-next": "^12.0.10",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
