⚡️ Next.jsライブラリが予測に出てこないので設定ファイルを修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "javascript.preferences.importModuleSpecifier": "non-relative",
   "editor.formatOnSave": true,
+  "path-intellisense.extensionOnImport": true,
   "editor.quickSuggestions": {
     "strings": true
   }
